second hero slide done

--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
 <body> 
   <div class="container">
     <div class="siema">
-      <div class="slide hero-slide">
-        <div class="bg bg--hero"></div>
-        <h1 class="title">Calculate your CO² emissions!</h1>
-        <div class="btn btn-large">Start</div>
+      <div class="slide hero-slide hero-slide__1">
+        <h1 class="title">Calculate your CO² emissions</h1>
+        <div class="btn btn-large next">Start</div>
       </div>
-      <div class="slide"></div>
-      <div class="slide"></div>
+      <div class="slide hero-slide hero-slide__2">
+        <p class="body-text">It really is surprising how much CO² emissions we produce in everyday life. For instance, CO² and other emissions are caused when driving a car, heating a house, cooking, working, celebrating or flying. These CO² emissions can easily be calculated with this carbon footprint calculator.</p>
+        <p class="body-text cta-text">Get active and make measurable contribution for climate protection!</p>
+        <div class="btn btn-large next">Next</div>
+      </div>
+      <div class="slide">
+        <div class="btn-wrapper">
+        	<div class="btn prev">Back</div>
+        	<div class="btn next">Next</div>
+        </div>
+      </div>
       <div class="slide"></div>
     </div>
   </div>
