first draft of bottom nav done

--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
         <div class="btn btn-large next">Next</div>
       </div>
       <div class="slide">
-        <div class="btn-wrapper">
-        	<div class="btn prev">Back</div>
-        	<div class="btn next">Next</div>
-        </div>
+        <div class="slide-bg"></div>
+        <p class="body-text">It really is surprising how much CO² emissions we produce in everyday life. For instance, CO² and other emissions are caused when driving a car, heating a house, cooking, working, celebrating or flying. These CO² emissions can easily be calculated with this carbon footprint calculator.</p>
+        <p class="body-text">It really is surprising how much CO² emissions we produce in everyday life. For instance, CO² and other emissions are caused when driving a car, heating a house, cooking, working, celebrating or flying. These CO² emissions can easily be calculated with this carbon footprint calculator.It really is surprising how much CO² emissions we produce in everyday life. For instance, CO² and other emissions are caused when driving a car, heating a house, cooking, working, celebrating or flying. These CO² emissions can easily be calculated with this carbon footprint calculator.</p>
+        <p class="body-text">It really is surprising how much CO² emissions we produce in everyday life. For instance, CO² and other emissions are caused when driving a car, heating a house, cooking, working, celebrating or flying. These CO² emissions can easily be calculated with this carbon footprint calculator.</p>
       </div>
       <div class="slide"></div>
+    </div>
+    <div class="bottom-nav">
+      <div class="btn-wrapper">
+        <div class="btn btn__outline prev">Back</div>
+        <div class="btn next">Next</div>
+      </div>
     </div>
   </div>
   
