--- a/index.html
+++ b/index.html
@@ -15,17 +15,88 @@
         <h1 class="title">Calculate your CO² emissions</h1>
         <div class="btn btn-large next">Start</div>
       </div>
+
       <div class="slide hero-slide hero-slide__2">
         <p class="body-text">It really is surprising how much CO² emissions we produce in everyday life. For instance, CO² and other emissions are caused when driving a car, heating a house, cooking, working, celebrating or flying. These CO² emissions can easily be calculated with this carbon footprint calculator.</p>
         <p class="body-text cta-text">Get active and make measurable contribution for climate protection!</p>
         <div class="btn btn-large next">Next</div>
       </div>
+
       <div class="slide">
         <div class="slide-bg"></div>
-        <p class="body-text">It really is surprising how much CO² emissions we produce in everyday life. For instance, CO² and other emissions are caused when driving a car, heating a house, cooking, working, celebrating or flying. These CO² emissions can easily be calculated with this carbon footprint calculator.</p>
-        <p class="body-text">It really is surprising how much CO² emissions we produce in everyday life. For instance, CO² and other emissions are caused when driving a car, heating a house, cooking, working, celebrating or flying. These CO² emissions can easily be calculated with this carbon footprint calculator.It really is surprising how much CO² emissions we produce in everyday life. For instance, CO² and other emissions are caused when driving a car, heating a house, cooking, working, celebrating or flying. These CO² emissions can easily be calculated with this carbon footprint calculator.</p>
-        <p class="body-text">It really is surprising how much CO² emissions we produce in everyday life. For instance, CO² and other emissions are caused when driving a car, heating a house, cooking, working, celebrating or flying. These CO² emissions can easily be calculated with this carbon footprint calculator.</p>
+        <h2 class="slide-title">Heating</h2>
+        <div class="form-group">
+          <label for="house-type">What type of house do you live in?</label>
+          <div class="slider">
+            <div class="slider-item">
+              <input type="radio" name="house-type" id="house">
+              <label for="house" class="btn btn-secondary btn-form">House</label>
+            </div>
+            <div class="slider-item">
+              <input type="radio" name="house-type" id="townhouse">
+              <label for="townhouse" class="btn btn-secondary btn-form">Townhouse</label>
+            </div>
+            <div class="slider-item">
+              <input type="radio" name="house-type" id="appartment">
+              <label for="appartment" class="btn btn-secondary btn-form">Appartment</label>
+            </div>
+            <div class="slider-item is-hidden"></div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="no-of-people">Number of people in the household</label>
+          <input type="number" name="no-of-people" id="no-of-people" min="1" max="10">
+        </div>
+
+        <div class="form-group">
+          <label for="area">Living area in m²</label>
+          <input type="number" name="area" id="area" min="0" max="25000">
+        </div>
+
+        <div class="form-group">
+          <label for="heating">Type of heating</label>
+          <select name="heating" id="heating">
+            <option value="oil">Heating oil (litres)</option>
+            <option value="gas">Natural gas (kWh)</option>
+            <option value="district">District heating (kWh)</option>
+            <option value="electricity">Electricity (kWh)</option>
+            <option value="green">Green electricity (kWh)</option>
+            <option value="pump">Heat pump (kWh)</option>
+            <option value="liquid-gas">Liquid gas (litres)</option>
+            <option value="solar">Solar heat (kWh)</option>
+            <option value="pallets">Wood (kg)</option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <label for="consumption-known">Annual consumption known?</label>
+          <div class="radio-select-wrapper">
+            <input type="radio" name="consumption-known" id="known-yes" checked>
+            <label for="known-yes" class="btn btn-secondary btn-form">Yes</label>
+            <input type="radio" name="consumption-known" id="known-no">
+            <label for="known-no" class="btn btn-secondary btn-form">No</label>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="heating-consumption">Annual consumption</label>
+          <input type="number" name="heating-consumption" id="heating-consumption" min="0" max="500000">
+        </div>
+
+        <div class="devider"></div>
+
+        <div class="sum">
+          <p class="sum-label">CO² emissions from heating</p>
+          <span class="sum-value">0</span>
+        </div>
+
+        <div class="sum">
+          <p class="sum-label">Preliminary total CO² emissions</p>
+          <span class="sum-value">4.32 tons</span>
+        </div>
       </div>
+
       <div class="slide"></div>
     </div>
     <div class="bottom-nav">
