--- a/index.html
+++ b/index.html
@@ -109,6 +109,6 @@
   
 
   <script src="./js/index.js"></script>
-  <!-- <script src="./js/siema.js"></script> -->
+  <script src="./js/siema.js"></script>
 </body>
 </html>
