minor bug fixes

--- a/index.html
+++ b/index.html
@@ -230,12 +230,12 @@
         <div class="form-group">
           <label for="flight-type-transcontinental">Flight class</label>
           <div class="slider">
-            <input type="radio" name="flight-type-transcontinental" id="economy">
-            <label for="economy" class="btn btn-secondary btn-small">Economy</label>
-            <input type="radio" name="flight-type-transcontinental" id="business">
-            <label for="business" class="btn btn-secondary btn-small">Business</label>
-            <input type="radio" name="flight-type-transcontinental" id="first">
-            <label for="first" class="btn btn-secondary btn-small">First</label>      
+            <input type="radio" name="flight-type-transcontinental" id="economy-trans">
+            <label for="economy-trans" class="btn btn-secondary btn-small">Economy</label>
+            <input type="radio" name="flight-type-transcontinental" id="business-trans">
+            <label for="business-trans" class="btn btn-secondary btn-small">Business</label>
+            <input type="radio" name="flight-type-transcontinental" id="first-trans">
+            <label for="first-trans" class="btn btn-secondary btn-small">First</label>      
             <div class="slider-item is-invisible"></div>
           </div>
         </div>
